k01/require-non-root-containers/kyverno-tests/resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: compliant-pod-runasnonroot
  namespace: default
spec:
  containers:
  - image: nginx:1.20
    name: app
  securityContext:
    runAsNonRoot: true

---
apiVersion: v1
kind: Pod
metadata:
  name: compliant-pod-runasuser-1000
  namespace: default
spec:
  containers:
  - image: nginx:1.20
    name: app
  securityContext:
    runAsUser: 1000

---
apiVersion: v1
kind: Pod
metadata:
  name: compliant-container-runasnonroot
  namespace: default
spec:
  containers:
  - image: nginx:1.20
    name: app
    securityContext:
      runAsNonRoot: true

---
apiVersion: v1
kind: Pod
metadata:
  name: compliant-container-runasuser-1001
  namespace: default
spec:
  containers:
  - image: nginx:1.20
    name: app
    securityContext:
      runAsUser: 1001

---
apiVersion: v1
kind: Pod
metadata:
  name: compliant-mixed-containers
  namespace: default
spec:
  containers:
  - image: nginx:1.20
    name: app1
  - image: redis:6
    name: app2
    securityContext:
      runAsUser: 2000
  initContainers:
  - image: busybox:1.35
    name: init
    securityContext:
      runAsNonRoot: true
  securityContext:
    runAsNonRoot: true

---
apiVersion: v1
kind: Pod
metadata:
  name: compliant-ephemeral-containers
  namespace: default
spec:
  containers:
  - image: nginx:1.20
    name: app
  ephemeralContainers:
  - image: busybox:1.35
    name: debug
    securityContext:
      runAsNonRoot: true
  securityContext:
    runAsUser: 1500

---
apiVersion: v1
kind: Pod
metadata:
  name: violation-pod-runasuser-root
  namespace: default
spec:
  containers:
  - image: nginx:1.20
    name: app
  securityContext:
    runAsUser: 0

---
apiVersion: v1
kind: Pod
metadata:
  name: violation-container-runasuser-root
  namespace: default
spec:
  containers:
  - image: nginx:1.20
    name: app
    securityContext:
      runAsUser: 0

---
apiVersion: v1
kind: Pod
metadata:
  name: violation-no-security-context
  namespace: default
spec:
  containers:
  - image: nginx:1.20
    name: app

---
apiVersion: v1
kind: Pod
metadata:
  name: violation-pod-runasnonroot-false
  namespace: default
spec:
  containers:
  - image: nginx:1.20
    name: app
  securityContext:
    runAsNonRoot: false

---
apiVersion: v1
kind: Pod
metadata:
  name: violation-container-runasnonroot-false
  namespace: default
spec:
  containers:
  - image: nginx:1.20
    name: app
    securityContext:
      runAsNonRoot: false

---
apiVersion: v1
kind: Pod
metadata:
  name: violation-mixed-root-containers
  namespace: default
spec:
  containers:
  - image: nginx:1.20
    name: app1
    securityContext:
      runAsUser: 1000
  - image: redis:6
    name: app2
    securityContext:
      runAsUser: 0

---
apiVersion: v1
kind: Pod
metadata:
  name: violation-init-container-root
  namespace: default
spec:
  containers:
  - image: nginx:1.20
    name: app
  initContainers:
  - image: busybox:1.35
    name: init
    securityContext:
      runAsUser: 0
  securityContext:
    runAsNonRoot: true

---
apiVersion: v1
kind: Pod
metadata:
  name: violation-ephemeral-container-root
  namespace: default
spec:
  containers:
  - image: nginx:1.20
    name: app
  ephemeralContainers:
  - image: busybox:1.35
    name: debug
    securityContext:
      runAsUser: 0
  securityContext:
    runAsNonRoot: true

---
apiVersion: v1
kind: Pod
metadata:
  name: edge-case-pod-runasuser-negative
  namespace: default
spec:
  containers:
  - image: nginx:1.20
    name: app
  securityContext:
    runAsUser: -5

---
apiVersion: v1
kind: Pod
metadata:
  name: edge-case-large-userid
  namespace: default
spec:
  containers:
  - image: nginx:1.20
    name: app
    securityContext:
      runAsUser: 65534
